[tool.poetry]
name = "pyutils"
version = "2.5.0"
description = "A personal collection of useful Python utilities"
authors = ["7o8v <269134615@qq.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/crackedbin/pyutils"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
